# baldr-rtc-python

./: .gitignore  README.md  example_config.toml  pyproject.toml
DMShapes/: BEAM1_FLAT_MAP_OFFSETS_23-04-2025T03.23.14.txt  BEAM2_FLAT_MAP_OFFSETS_23-04-2025T03.17.01.txt  BEAM3_FLAT_MAP_OFFSETS_23-04-2025T03.17.50.txt  BEAM4_FLAT_MAP_OFFSETS_23-04-2025T03.20.14.txt
baldr_rtc/: server.py
baldr_rtc/commander/: commands.py  module.py  protocol.py  server.py
baldr_rtc/core/: commands.py  config.py  state.py
baldr_rtc/io/: __init__.py  base.py  cam_client.py  factory.py  null_backend.py  shm_backend.py  simulation_backend.py  zmq_backend.py
baldr_rtc/io/backend_tests/: test_shm_backend.py  test_simulation_backend.py
baldr_rtc/rtc/: controllers.py  loop.py
docs/: config_requirements.txt  dev_guidelines.txt  handover.txt  requirements_notes.txt  todo.txt
scripts/: baldr_server.py  commander_client.py
